{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "PlayerSelection",
            "id": "103197b4-8e22-446b-baa3-512904ed5e5f",
            "actions": [
                {
                    "name": "ChangePlayerControl",
                    "type": "Button",
                    "id": "c1f64771-ff37-4753-90af-f8eecb9f6cbc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangePlayerIndexUp",
                    "type": "Button",
                    "id": "5f1f187a-a4ac-48fa-a658-e66a9e09a717",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangePlayerIndexDown",
                    "type": "Button",
                    "id": "d8b157b5-b083-4f55-9566-2443eb0730fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "54d51385-887e-49c7-9df6-6894424cd7bd",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangePlayerControl",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "506afc00-fe4d-4fc1-aeda-69d40a73a813",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangePlayerIndexUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df66d207-3af2-407c-99d2-453d7e93fccf",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangePlayerIndexDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}